@@ -14,3 +14,4 @@
     - admin
     - tsuru
     - 7pi
+    - X11
