@@ -58,6 +58,10 @@
     - restart postgresql
   tags: postgresql
 
+- name: Postgresql | Start the service
+  service: name=postgresql state=started enabled=true
+  tags: postgresql
+
 - name: Postgresql | Set admin password
   command: sudo -u postgres psql {{ pg_admin_username }} -c "ALTER USER postgres with password '{{ pg_admin_password }}';"
   tags: postgresql
@@ -69,9 +73,4 @@
 - name: Postgresql | Create role {{deploy_user}}
   shell: "sudo -u postgres createuser -d -r {{deploy_user}} || true"
   tags: postgresql
-
-- name: Postgresql | Start the service
-  service: name=postgresql state=started enabled=true
-  tags: postgresql
-
 
